# recommend

./: .gitignore  README.md  bigquery_client.py  main.py  pyproject.toml  recommendation_swiper.py  swipe_session.json
templates/: index.html
vector_db/: chroma.sqlite3
vector_db/6615fba0-bd52-47f0-b78d-ac5e96e106cb/: index_metadata.pickle
vector_db/f76df4db-f3ac-483b-989c-0595c2bfb386/: index_metadata.pickle
